--- a/gb/15/7/15/n4480692.md
+++ b/gb/15/7/15/n4480692.md
@@ -1,49 +1,67 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ewwcqx3979/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ewwcqx3979/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ewwcqx3979/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>2015上半年日本人气女星 广濑铃居首</h2>
 
 <h6></h6>
-<hr>[replace]<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/ewwcqx3979/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/ewwcqx3979/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/ewwcqx3979/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>;pic.twitter.com/=</a><img width="600" src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ewwcqx3979/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href=";instagram-media"="></blockquote><img width="600" src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/ntdtv/ins.jpg" ><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/ewwcqx3979/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media";"https://www.facebook.com/plugins/post.php=></a><img width="600" src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/ewwcqx3979/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php
+<hr>
+	<p>【大纪元2015年07月15日讯】（大纪元记者李贤珍综合报导）日本2015上半年人气女星票选公布，第一名为<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B9%BF%E6%BF%91%E9%93%83.md#1">广濑铃</a>，其次为去年的冠军<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9C%89%E6%9D%91%E6%9E%B6%E7%BA%AF.md#1">有村架纯</a>，第三名为高畑充希，第四名为杏，第五名是首次入榜、主演晨间剧《小希》的土屋太凤。<br />
+	<figure id="attachment_5888172" aria-describedby="caption-attachment-5888172" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/07/1507131108521750-600x400.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5888172" class="wp-caption-text"><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B9%BF%E6%BF%91%E9%93%83.md#1">广濑铃</a>此次票选获得第一名。（Foster官网脸书）</figcaption></figure><br />
+	<figure id="attachment_5888191" aria-describedby="caption-attachment-5888191" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/07/1505240936461487-600x480.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5888191" class="wp-caption-text"><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9C%89%E6%9D%91%E6%9E%B6%E7%BA%AF.md#1">有村架纯</a>此次票选获得第二名。（Koki Nagahama/Getty Images）</figcaption></figure><br />
+	<figure id="attachment_5888207" aria-describedby="caption-attachment-5888207" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/07/1507131145531750-600x379.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5888207" class="wp-caption-text">高畑充希此次票选获得第三名。（Youtube截图）</figcaption></figure></p>
+<p>日本公信榜日前以网路票选，调查年龄层由10岁至50岁，选出2015上半年最受欢迎的十位人气女星。第一名的广濑铃（17岁）今年主演电视剧《学校的阶梯》与电影《海街日记》等，拍摄多部广告，被选为第一名的理由是“很可爱、经常在电视上看到她”。</p>
+<p>有村架纯于2013年因演出《小海女》而走红，此次调查中广受50岁年龄层的粉丝支持。今年她主演两部电影《闪烁的爱情》与福士苍汰合作，并在真实故事改编的《倒数第一辣妹》染金发演出。</p>
+<p>[[8]]<br />
+	<figure id="attachment_5888219" aria-describedby="caption-attachment-5888219" style="width: 350px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/07/1507131148541750.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5888219" class="wp-caption-text">木村文乃（Tristone公司官网）</figcaption></figure></p>
+<p>因演出《HERO》而超红的吉田羊也首次打进第六名。去年吉田羊于《HERO》饰马场礼子而爆红，被日本封为“大器晚成女星”并且未婚而引起许多粉丝关注。第七名为木村文乃，她于日剧《钱的战争》饰演草弓剪刚的未婚妻而备受瞩目。</p>
+<p>绫濑遥与松冈茉优并列第八名，第十名为大岛优子。因演出《小海女》而走红的松冈茉优，近日主持娱乐节目也受观众好评。</p>
+<p>
+	<figure id="attachment_5888225" aria-describedby="caption-attachment-5888225" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/07/1407230847132669-600x400.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5888225" class="wp-caption-text">绫濑遥此次票选获得第八名。（Kiyoshi Ota/Getty Images）</figcaption></figure><br />
+	<figure id="attachment_5888239" aria-describedby="caption-attachment-5888239" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/07/1507150208381470-600x369.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5888239" class="wp-caption-text">松冈茉优此次票选获得第八名。（Youtube截图）</figcaption></figure><br />
+	<figure id="attachment_5888251" aria-describedby="caption-attachment-5888251" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/07/1506050237111470-600x397.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5888251" class="wp-caption-text">大岛优子此次票选获得第十名。（采昌国际多媒体提供)</figcaption></figure></p>
+<p><h2> 日本2015上半年人气女星排行</h2>
+<p>第1名：广濑铃<br />第2名：有村架纯<br />第3名：高畑充希<br />第4名：杏<br />第5名：土屋太凤<br />第6名：吉田羊<br />第7名：木村文乃<br />第8名：绫濑遥<br />第8名：松冈茉优<br />第10名：大岛优子</p>
+<p>责任编辑：辛幼安</p>
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/15/7/3/n4471630.md#1">《HERO》电影宣传 包围东京电车厢</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/15/7/12/n4478635.md#1">松隆子再现《HERO》木村拓哉很愉快</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/15/10/8/n4545302.md#1">DAIGO求婚北川景子 定明年1月结婚</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/15/10/10/n4547243.md#1">北川景子发文想念台湾：小笼包太好吃了</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/12/n2360665.md#1">日人气女星“星野亚希”担任日本“海外安全大使”&nbsp;</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/3/n2416654.md#1">日本女星改名盘点 滨崎步幸田来未皆在列</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/11/4/n2711468.md#1">揭露日本女星的美腿秘密</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/12/8/3/n3650180.md#1">日本色情片女星贺中国奥运首金 被批卖国</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank">林辉：上海中国国货公司创办人死于文革前</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/23/n11890264.md#1" target="_blank">《转法轮》为波兰青年打造全新的生命</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10878489.md#1" target="_blank">共产暴政录：文革中教师校长被打死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905575.md#1">“我跟你回家好不好？” 台网友曝榕树托梦</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/15/n12880731.md#1">【馨香雅句】王羲之的书法老师竟是她</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/24/n12903028.md#1">【小宇宙传说】死亡是生命结束？天上有摄像机</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/23/n12899457.md#1">【命理】混迹绿林怎能得福寿善报？</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/20/n12891592.md#1">【未解之谜】轰动世界的巴克斯特实验</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12907174.md#1">【新闻看点】习启用3战舰 专家：中共军力不优势</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/23/n12900976.md#1">【未解之谜】中国古人的濒死体验故事</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12906329.md#1">【新闻大家谈】武毒所新线索“美军传毒”破解</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12904623.md#1">台上献唱撞脸刘德华 港星江华模样惊呆网友</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/24/n12903045.md#1">美智库报告：习不指定接班人的四种后果</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/24/n12902909.md#1">中共围剿特斯拉 马斯克动了谁的奶酪？</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12904623.md#1">台上献唱撞脸刘德华 港星江华模样惊呆网友</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905099.md#1">奥斯卡揭晓 赵婷《游牧人生》获最佳导演等三奖</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905001.md#1">尹汝贞摘奥斯卡最佳女配角 谦逊感言获满堂彩</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12903597.md#1">林逸欣情定7年男友 曝婚讯“一起慢慢变老”</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12906690.md#1">港星林芊妤怀孕期间打疫苗 流产后坦言后悔</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905575.md#1">“我跟你回家好不好？” 台网友曝榕树托梦</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12903574.md#1">竹笋撑破湖南学校宿舍水泥地 快长到天花板</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905773.md#1">几百万人抢看的惊奇短片：海鸥骑海鸥</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/24/n12902272.md#1">8种适合种在菜园的花 好看好吃还能驱虫</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12903393.md#1">美国田径赛杀出“程咬金” 小狗乱入冲第一</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ewwcqx3979/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ewwcqx3979/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/7/15/n4480692.htm"></a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/7/15/n4480692.htm">2015上半年日本人气女星 广濑铃居首</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ewwcqx3979/djy/blob/master/gb/15/7/15/n4480692.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ewwcqx3979/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ewwcqx3979/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/15/7/15/n4480692.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
